nav link on mobile fixed

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -37,10 +37,22 @@
     /* background-color: aqua; */
     display: flex;
     align-items: center;
+    justify-content: center;
     font-weight: 400;
     font-size: 15px;
 
+    .txt {
+        width: 80%;
+        height: 100%;
+        /* background-color: brown; */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-inline: 20px;
+    }
 }
+
+
 
 .nav a.active {
     color: orange;
@@ -89,9 +101,7 @@
         display: none;
         width: 100%;
         height: 10vh;
-        justify-content: space-between;
-        padding-inline: 20px;
-        flex-direction: row;
+        justify-content: center;
         align-items: center;
         background: rgba(8, 21, 73, 0.35);
         border-radius: 16px;
@@ -105,16 +115,26 @@
         top: 10vh;
         left: 10%;
         transform: translateX(-50%) translateY(0);
-    } 
 
-    .nav a {
-        text-decoration: none;
-        color: white;
-        display: flex;
-        justify-content: center;
-        margin-left: 4%;
-        transform: translateX(-50%);
-    
+
+        & .txt {
+            width: 98%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /* background-color: red; */
+            gap: 20px;
+
+            & a {
+                text-decoration: none;
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+
     }
 
     .nav a.active {
